kubernetes/jacksont-test-flask-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jacksont-test-flask-deployment
  labels:
    app: jacksont-test-flask-deployment
    username: jacksont
    env: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jacksont-test-flask-deployment
      username: jacksont
      env: test
  template:
    metadata:
      name: jacksont-test-flask-deployment
      labels:
        app: jacksont-test-flask-deployment
        username: jacksont
        env: test
    spec:
      containers:
        - name: jacksont-test-flask-deployment
          imagePullPolicy: Always
          image: jthet/gene_api:1.0
          ports:
            - containerPort: 5000
