kubernetes/quant-data-flask-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quant-stock-flask-deployment #jacksont-test-flask-deployment
  labels:
    app: quant-stock-flask-deployment
    username: jacksont
    env: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quant-stock-flask-deployment
      username: jacksont
      env: test
  template:
    metadata:
      name: quant-stock-flask-deployment
      labels:
        app: quant-stock-flask-deployment
        username: jacksont
        env: test
    spec:
      containers:
        - name: quant-stock-flask-deployment
          imagePullPolicy: Always
          image: jthet/quant_stock_api:1.0.1
          ports:
            - containerPort: 5000
