kubernetes/quant-data-redis-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quant-stock-redis-deployment  #jacksont-test-redis-deployment
  labels:
    app: quant-stock-redis-deployment
    username: jacksont
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quant-stock-redis-deployment
      username: jacksont
      env: test
  template:
    metadata:
      name: quant-stock-redis-deployment
      labels:
        app: quant-stock-redis-deployment
        username: jacksont
        env: test
    spec:
      containers:
        - name: redis
          imagePullPolicy: Always
          image: redis:7
          ports:
          - name: http
            containerPort: 5000
          volumeMounts:
          - name: quant-app-data
            mountPath: "/data"
      volumes:
      - name: quant-app-data
        persistentVolumeClaim:
          claimName: quant-app-data
