kubernetes/quant-data-flask-nodeport-service.yml
---
kind: Service
apiVersion: v1
metadata: 
    name: quant-data-flask-service-nodeport
spec:
    type: NodePort
    selector:
        app: quant-stock-flask-deployment
    ports:
      - port: 5000
        targetPort: 5000
