kubernetes/quant-data-flask-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: quant-stock-flask-service #jacksont-test-flask-service
  labels:
    username: jacksont
    env: test
spec:
  type: ClusterIP
  selector:
    app: quant-stock-flask-deployment
  ports:
  - name: http
    port: 5000
    targetPort: 5000
