kubernetes/quant-data-redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: quant-stock-redis-service #jacksont-test-redis-service 
  labels:
    username: jacksont
    env: test
spec:
  type: ClusterIP
  selector:
    app: quant-stock-redis-deployment
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
